Changes; - Added 32 and 64-bit solution for `callme`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "**/*.id2": true,
         "**/*.nam": true,
         "**/*.til": true,
-        "**/peda-session-*": true
+        "**/peda-session-*": true,
+        "**/.gdb_history": true
     }
 }
